# kal

./: .gitignore  Cargo.toml  README.md
kal_cli/: Cargo.toml
kal_cli/src/: main.rs
kal_cli/src/cli/: mod.rs  output.rs
kal_cli/src/cli/commands/: calendar.rs  event.rs
kal_cli/src/handlers/: calendar.rs  event.rs
kal_core/: Cargo.toml
kal_core/src/: lib.rs
kal_core/src/application/: error.rs
kal_core/src/application/commands/calendars/: create_calendar.rs  delete_calendar.rs  mod.rs  rename_calendar.rs  unarchive_calendar.rs
kal_core/src/application/commands/events/: create_event.rs  update_event_description.rs  update_event_time_range.rs
kal_core/src/application/commands/recurring/: cancel_recurring_occurrence.rs  create_recurring_event.rs  mod.rs  reschedule_recurring_occurrence.rs  restore_recurring_event.rs  restore_recurring_occurrence.rs
kal_core/src/domain/: calendar.rs  error.rs  event.rs  mod.rs  recurrence.rs  repository.rs  value_objects.rs
kal_core/src/infrastructure/persistence/: calendar_repository.rs  error.rs  event_repository.rs  mappers.rs  mod.rs  recurring_event_repository.rs
migrations/: 001_initial_schema.sql
src/: lib.rs
src/application/commands/: mod.rs
src/application/commands/calendars/: archive_calendar.rs  create_calendar.rs  update_calendar_description.rs
src/application/commands/events/: mod.rs  (+6 more)
src/domain/: calendar.rs  error.rs  event.rs  mod.rs  recurrence.rs  repository.rs
src/infrastructure/persistence/: calendar_repository.rs  event_repository.rs  mappers.rs  models.rs  recurring_event_repository.rs
(+4 files in other folders)
