[package]
name = "kal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
getset = "0.1.6"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "uuid",
    "chrono",
] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "v5"] }
async-trait = "0.1.89"
chrono = "0.4.42"
colored = "3.1.1"
dirs = "6.0.0"
