[workspace]
members = [
    "kal_core",
    "kal_cli",
]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
