[package]
name = "kal_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kal_core = { path = "../kal_core" }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
colored = "3.1.1"
dirs = "6.0.0"
